<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        tools:context=".SignUp">

        <TextView
            android:id="@+id/signup_now_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#03A281"
            android:textSize="32sp"
            android:textStyle="bold"
            android:text="@string/sign_up_now"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="64dp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            app:backgroundTint="#03A281"
            android:id="@+id/signup_firstname_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/signup_now_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:padding="8dp"
            android:fontFamily="sans-serif"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/first_name_edit_text_hint"
            android:textColorHint="#000"/>
        <androidx.appcompat.widget.AppCompatEditText
            app:backgroundTint="#03A281"
            android:id="@+id/signup_lastname_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/signup_firstname_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:padding="8dp"
            android:fontFamily="sans-serif"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/last_name_edit_text_hint"
            android:textColorHint="#000"/>
        <androidx.appcompat.widget.AppCompatEditText
            app:backgroundTint="#03A281"
            android:id="@+id/signup_email_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/signup_lastname_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:padding="8dp"
            android:fontFamily="sans-serif"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/email_edit_text_hint"
            android:textColorHint="#000"/>
        <androidx.appcompat.widget.AppCompatEditText
            app:backgroundTint="#03A281"
            android:id="@+id/signup_password_edt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/signup_email_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="textStart"
            android:padding="8dp"
            android:fontFamily="sans-serif"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password_edit_text_hint"
            android:textColorHint="#000"/>

        <Button
            android:id="@+id/signup_sign_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/signup_password_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:text="@string/sign_up_btn"
            android:textAllCaps="false"
            android:background="@drawable/signup_sign_btn_back"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            />
        <TextView
            android:id="@+id/signup_login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signup_sign_btn"
            app:layout_constraintStart_toStartOf="@id/signup_sign_btn"
            app:layout_constraintEnd_toEndOf="@id/signup_sign_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:clickable="true"
            android:text="@string/already_have_an_account_sign_in"
            android:focusable="true"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>